add query cloudinary

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -76,7 +76,7 @@
 					</li>
 
 					<li class="am-Header-menu-item">
-						<a class="am-Signin-button" href="#">
+						<a class="am-Signin-button" href="/auth/login">
 							<i class="fa fa-user"></i> INGRESAR
 						</a>
 					</li>
