add href to auth buttons

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -773,9 +773,12 @@ body
 		letter-spacing 2px
 		width 100%
 		font-size 10px
-		color white
-		padding 15px 20px
 		cursor pointer
+		font-family 'Arial'
+		a
+			padding 15px 20px
+			color white
+			display block
 		i
 			font-size 1.15em
 		&[data-color="blue"]
