--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -10,7 +10,11 @@
 			<div class="separator">
 				<span class="line"></span><span class="text">FB SYNC</span><span class="line"></span>
 			</div>
-			<a class="button" data-color="blue" href='/auth/facebook'><i class="fa fa-facebook"></i>&nbsp;&nbsp; INGRESAR CON FACEBOOK</a>
+			<button class="button" data-color="blue">
+				<a href="/auth/facebook">
+					<i class="fa fa-facebook"></i>&nbsp;&nbsp; INGRESAR CON FACEBOOK
+				</a>
+			</button>
 			<div class="separator">
 				<span class="line"></span><span class="text">CORREO</span><span class="line"></span>
 			</div>
@@ -18,7 +22,9 @@
 			<form class='login-form'>
 				<input name='email' class="input" type="email" placeholder="Correo" required></input>
 				<input name='password' class="input u-margin-top-10" type="password" placeholder="Contraseña" required></input>
-				<button class="button u-margin-top-10" data-color="green">INGRESAR A MI CUENTA</button>
+				<button class="button u-margin-top-10" data-color="green">
+					<a>INGRESAR A MI CUENTA</a>
+				</button>
 			</form>
 
 			<div class="options">
