--- a/app/views/auth/signup.html
+++ b/app/views/auth/signup.html
@@ -10,14 +10,20 @@
 			<div class="separator">
 				<span class="line"></span><span class="text">FB SYNC</span><span class="line"></span>
 			</div>
-			<button class="button" data-color="blue"><i class="fa fa-facebook"></i>&nbsp;&nbsp; REGISTRARME CON FACEBOOK</button>
+			<button class="button" data-color="blue">
+				<a href="/auth/facebook">
+					<i class="fa fa-facebook"></i>&nbsp;&nbsp; REGISTRARME CON FACEBOOK
+				</a>
+			</button>
 			<div class="separator">
 				<span class="line"></span><span class="text">CORREO</span><span class="line"></span>
 			</div>
 			<p class="error">Tu correo o tu contraseña son incorrectas</p>
 			<input class="input" type="text" data-error="true" placeholder="E-mail" value="luis.augusto@artemanifiesto.com"></input>
 			<input class="input u-margin-top-10" type="password" placeholder="Password" value="123456"></input>
-			<button class="button u-margin-top-10" data-color="green">REGISTRARME CON MI CORREO</button>
+			<button class="button u-margin-top-10" data-color="green">
+				<a>REGISTRARME CON MI CORREO</a>
+			</button>
 			<p class="msg">Al registrarme estoy aceptando los términos y condiciones de la plataforma.</p>
 			<p class="change">¿Ya tienes una cuenta? <a href="#">Ingresa</a></p>
 		</div>
