href in resend email button

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -717,11 +717,14 @@ body
 		font-family 'Montserrat', sans-serif
 		font-weight bold
 		font-size 10px
-		padding 15px
-		letter-spacing 2px
 		width 100%
+		letter-spacing 2px
 		border-radius 4px
 		cursor pointer
+		a
+			padding 15px
+			color black
+			display block
 
 
 
