--- a/app/views/auth/reset.html
+++ b/app/views/auth/reset.html
@@ -6,20 +6,15 @@
 		<div class="am-register-box">
 			<img class="logo-img" src="img/logo-small.png" />
 			<img class="logo-text" src="img/logo-text-black.svg" />
-			<p class="title">Regístrate gratis en la plataforma global de artistas y creadores independientes</p>
-			<div class="separator">
-				<span class="line"></span><span class="text">FB SYNC</span><span class="line"></span>
-			</div>
-			<button class="button" data-color="blue"><i class="fa fa-facebook"></i>&nbsp;&nbsp; REGISTRARME CON FACEBOOK</button>
-			<div class="separator">
-				<span class="line"></span><span class="text">CORREO</span><span class="line"></span>
-			</div>
-			<p class="error">Tu correo o tu contraseña son incorrectas</p>
-			<input class="input" type="text" data-error="true" placeholder="E-mail" value="luis.augusto@artemanifiesto.com"></input>
-			<input class="input u-margin-top-10" type="password" placeholder="Password" value="123456"></input>
-			<button class="button u-margin-top-10" data-color="green">REGISTRARME CON MI CORREO</button>
-			<p class="msg">Al registrarme estoy aceptando los términos y condiciones de la plataforma.</p>
-			<p class="change">¿Ya tienes una cuenta? <a href="#">Ingresa</a></p>
+			<p class="title">Los genios usualmente olvidan las cosas por concentrarse en lo importante</p>
+			<br><br><br>
+			<input class="input" type="text" placeholder="E-mail"></input>
+			<button class="button u-margin-top-10" data-color="green">
+				<a>RESETEAR MI PASSWORD</a>
+			</button>
+			<p class="change" style="text-align: right;"><a href="#">Ya Recorde mi Clave</a></p>
+			<br><br><br><br><br><br>
+			<p class="change">¿Aún no tienes una cuenta? <a href="#">Regístrate</a></p>
 		</div>
 	</div>
 {% endblock %}
