--- a/app/views/pages/confirm-email.html
+++ b/app/views/pages/confirm-email.html
@@ -19,7 +19,9 @@
 				<span class="line"></span>
 			</div>
 			<p class="subtitle">Si no te llegó el correo, revisa en tu carpeta de SPAM ó pide que te reenviemos el correo.</p>
-			<button class="button-resend">REENVIAR CORREO</button>
+			<button class="button-resend">
+				<a>REENVIAR CORREO</a>
+			</button>
 		</div>
 	</div>
 {% endblock %}
