--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -103,10 +103,8 @@
 	  </div>
 	</script>
 
-	<script type="text/template" id="template-carrousel-item">
-		<div class="am-MoreImages">
-			<img src='<%=photo%>'/>
-		</div>
+	<script type="text/template" id="template-carrouselItem">
+		<div class="am-MoreImages" style="background-image: url(<%=photo%>);"></div>
 	</script>
 
 	{% block scripts %} {% endblock %}
