--- a/app/views/pages/complete-profile.html
+++ b/app/views/pages/complete-profile.html
@@ -18,7 +18,7 @@
 			</div>
 
 			<div class="grid-50 mobile-grid-100">
-				<p class="link" style="line-height: 46px;">http://artemanifiesto.com/</p>
+				<p class="link" style="line-height: 46px;">http://artemanifiesto.com/user/</p>
 			</div>
 			<div class="grid-50 mobile-grid-100">
 				<input class="input" type="text" placeholder="Ingresa tu usuario"/>
