--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -28,7 +28,6 @@
 					<div class="u-separator"></div>
 					<p class="am-Single-title-text u-margin-top-15">{{work.description}}</p>
 					<p class="am-Single-text u-margin-top-10">42 cm x 42 cm</p>
-					<p class="am-Single-text u-margin-top-10">Estado: <strong>Disponible original y productos</strong></p>
 					<p class="am-Single-text u-margin-top-20">Categoría:</p>
 					{% for category in work.Categories %}
 						<span class="am-Category-box u-margin-top-7">{{category.name}}</span>
@@ -76,7 +75,9 @@
 				<div class="single-menu">
 					<div class="artist">
 						<div class="FollowArtist">
-							<img src="{{work.User.photo}}">
+							<a href="{{work.User.url}}">
+								<img src="{{work.User.photo}}">
+							</a>
 							<div>
 								<p class="u-padding-bottom-4" style="font-weight: bold;">{{work.User.firstname}}</p>
 								<p class="u-padding-bottom-7"> <strong></strong> {{work.User.city}}, {{work.User.country}}</p>
@@ -86,11 +87,11 @@
 					</div>
 					<div class="menu">
 						<div class="single-tabs">
-							<div class="single-tab" selected="true">
+							<div class="single-tab">
 								<p>MANIFIESTO</p>
 								<i class="fa fa-cube"></i>
 							</div>
-							<div class="single-tab">
+							<div class="single-tab" selected="true">
 								<p>PRODUCTOS</p>
 								<span>25</span>
 							</div>
@@ -98,7 +99,7 @@
 								<p>REVIEWS</p>
 								<span>25</span>
 							</div>
-							<div class="single-tab" selected="true">
+							<div class="single-tab">
 								<p>TAGS</p>
 								<i class="fa fa-align-left"></i>
 							</div>
@@ -109,106 +110,22 @@
 		</div>
 	</div>
 
-
-	<!-- ********************************************************************
-		$ PRODUCTS
-	********************************************************************* -->
 	<div class="grid-container u-margin-top-20">
 		<div class="grid-100">
-			<p class="am-Products-title">Arte de pared</p>
+			<p class="am-Products-title">Productos</p>
 			<div class="u-separator"></div>
 		</div>
 	</div>
 
 	<div class="grid-container u-margin-top-20">
 		<div class="grid-100 grid-parent">
-			<div class="more-images">
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-			</div>
-		</div>
-	</div>
-
-	<!-- <div class="grid-container u-margin-top-20">
-		<div class="grid-20 mobile-grid-33">
-			<div class="am-MoreImages" style="background-image: url(/img/products/Wall-art-1.jpg);"></div>
-		</div>
-		<div class="grid-20 mobile-grid-33">
-			<div class="am-MoreImages" style="background-image: url(/img/products/Wall-Art-Art-print.jpg);"></div>
-		</div>
-		<div class="grid-20 mobile-grid-33">
-			<div class="am-MoreImages" style="background-image: url(/img/products/Wall-Art-Canvas-print.jpg);"></div>
-		</div>
-		<div class="grid-20 mobile-grid-33">
-			<div class="am-MoreImages" style="background-image: url(/img/products/wall-art-photo-print.jpg);"></div>
-		</div>
-		<div class="grid-20 mobile-grid-33">
-			<div class="am-MoreImages" style="background-image: url(/img/products/Wall-art-photo-print.jpg);"></div>
-		</div>
-	</div> -->
-
-	<div class="grid-container">
-		<div class="grid-100">
-			<p class="am-Products-title">Accesorios</p>
-			<div class="u-separator"></div>
-		</div>
-	</div>
-
-	<div class="grid-container u-margin-top-20">
-		<div class="grid-100 grid-parent">
-			<div class="more-images">
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-			</div>
-		</div>
-	</div>
-
-	<!-- <div class="grid-container u-margin-top-20">
-		<div class="grid-20 mobile-grid-33">
-			<div class="am-MoreImages" style="background-image: url(/img/products/Home-Decor-Mug.jpg);"></div>
-		</div>
-		<div class="grid-20 mobile-grid-33">
-			<div class="am-MoreImages" style="background-image: url(/img/products/Home-Decor-Throw-Pillow.jpg);"></div>
-		</div>
-		<div class="grid-20 mobile-grid-33">
-			<div class="am-MoreImages" style="background-image: url(/img/products/Cases_Skins-Iphone-Case.jpg);"></div>
-		</div>
-		<div class="grid-20 mobile-grid-33">
-			<div class="am-MoreImages" style="background-image: url(/img/products/Cases_Skins-Galaxy-Case.jpg);"></div>
-		</div>
-		<div class="grid-20 mobile-grid-33">
-			<div class="am-MoreImages" style="background-image: url(/img/products/Cases_Skin-Ipad.jpg);"></div>
-		</div>
-	</div> -->
-
-	<div class="grid-container">
-		<div class="grid-100">
-			<p class="am-Products-title">Ropa</p>
-			<div class="u-separator"></div>
-		</div>
-	</div>
-
-	<div class="grid-container u-margin-top-20">
-		<div class="grid-100 grid-parent">
-			<div class="more-images">
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+			<div class="more-images products">
 			</div>
 		</div>
 	</div>
 
 
-	<!-- ********************************************************************
-		$ MORE
-	********************************************************************* -->
 	<div class="u-separator u-margin-top-60"></div>
-
 	<div class="grid-container u-margin-top-60">
 		<div class="grid-100">
 			<p class="am-more-text u-text-center u-padding-bottom-10">Otras obras del artista</p>
@@ -218,18 +135,12 @@
 
 	<div class="grid-container">
 		<div class="grid-100 grid-parent">
-			<div class="more-images">
-				<div class="am-MoreImages" style="background-image: url(/img/works/work15.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/works/work16.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/works/work17.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/works/work15.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/works/work16.jpg);"></div>
+			<div class="more-images more">
 			</div>
 		</div>
 	</div>
 
 	<div class="u-separator u-margin-top-60"></div>
-
 	<div class="grid-container u-margin-top-60">
 		<div class="grid-100">
 			<p class="am-more-text u-text-center u-padding-bottom-10">Obras relacionadas</p>
@@ -239,35 +150,25 @@
 
 	<div class="grid-container">
 		<div class="grid-100 grid-parent">
-			<div class="more-images products">
+			<div class="more-images similar">
 			</div>
 		</div>
 	</div>
 
-
-	<!-- ********************************************************************
-		$ RESPORT
-	********************************************************************* -->
-	<div class="am-Report u-padding-top-25 u-padding-bottom-25 u-margin-top-60">
-		<div class="grid-container">
-			<div class="grid-100">
-				<p class="am-report-text"> Reportar:&nbsp;
-					<a class="am-report-link" href="">Contenido inapropiado</a> &nbsp;ó&nbsp;
-					<a class="am-report-link blue" href="">Copyrights y derechos de autor</a>
-				</p>
-			</div>
-		</div>
-	</div>
+{% include '../../partials/report.html' %}
 
 {% endblock %}
 
 {% block scripts %}
 	<script>
 	$(document).ready(function() {
-		console.log('more');
-		console.log({{more|json|safe}});
+		new APP.Viewer('carrouselItem', $('.products'), null, {{products|json|safe}});
+		new APP.Viewer('carrouselItem', $('.more'), null, {{more|json|safe}});
+		new APP.Viewer('carrouselItem', $('.similar'), null, {{similar|json|safe}});
 
-		new APP.Viewer('carrouselItem', $('.products'), null, {{more|json|safe}});
+		$('.am-Follow-button').click(function(event){
+
+		});
 	});
 	</script>
 {% endblock %}
