--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -21,31 +21,31 @@
 		<div class="grid-container">
 			<div class="grid-100">
 				<div class="am-Profile-menu">
-					<a href='{{profile.url}}'>
+					<a href='{{profile.url}}/'>
 						<div class="am-Profile-menu-item portfolio">
 							<p>PORTAFOLIO</p>
 							<p>{{data[0]}}</p>
 						</div>
 					</a>
-					<a href='{{profile.url}}store'>
+					<a href='{{profile.url}}/store'>
 						<div class="am-Profile-menu-item store">
 							<p>TIENDA</p>
 							<p>{{data[1]}}</p>
 						</div>
 					</a>
-					<a href='{{profile.url}}collections'>
+					<a href='{{profile.url}}/collections'>
 						<div class="am-Profile-menu-item collections">
 							<p>COLECCIONES</p>
 							<p>{{data[2]}}</p>
 						</div>
 					</a>
-					<a href='{{profile.url}}followings'>
+					<a href='{{profile.url}}/followings'>
 						<div class="am-Profile-menu-item followings">
 							<p>SIGUIENDO</p>
 							<p>{{data[3]}}</p>
 						</div>
 					</a>
-					<a href='{{profile.url}}followers'>
+					<a href='{{profile.url}}/followers'>
 						<div class="am-Profile-menu-item followers">
 							<p>SEGUIDORES</p>
 							<p>{{data[4]}}</p>
