--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -1,4 +1,4 @@
-{% extends './partials/base.html' %}
+{% extends '../../partials/base.html' %}
 
 
 {% block elements %}
@@ -40,19 +40,10 @@
 				<p class="title">Ancho</p>
 				<input class="input" type="text" placeholder="Sin título"/>
 			</div>
-			<div class="grid-50 mobile-grid-50">
+
+      <div class="grid-50 mobile-grid-50">
 				<p class="title">Alto</p>
 				<input class="input" type="text" placeholder="Sin título"/>
-			</div>
-
-			<div class="grid-50 mobile-grid-50">
-				<p class="title">Agregar obra a una serie</p>
-				<select class="input select">
-					<option disabled selected>Mis últimas obras</option>
-					<option>Arte urbano</option>
-					<option>Digital</option>
-					<option>Tecnica mixta</option>
-				</select>
 			</div>
 
 			<div class="grid-100 mobile-grid-100">
