--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -2,47 +2,53 @@
 	<!-- ********************************************************************
 		$ HEADER
 	********************************************************************* -->
-	<!-- <div class="grid-container u-padding-top-15 u-padding-bottom-15">
+	<div class="grid-container u-padding-top-15 u-padding-bottom-15">
 		<div class="grid-100">
 			<header class="am-Header">
 				<figure class="am-Header-logo">
-					<img src="img/logo.png">
+					<a href="/">
+						<img class="large" src="/img/logo.png">
+						<img class="small" src="/img/logo-small.png">
+					</a>
 				</figure>
 				<ul class="am-Header-menu">
 					<li class="am-Header-menu-item">
-						<a class="am-Header-text" href="#">HOME</a>
+						<a class="am-Header-text desktop" href="/users/specialty/all/page-1?order=popularity">
+							<p>ARTISTAS</p><i class="fa fa-heart-o"></i>
+						</a>
 					</li>
 					<li class="am-Header-menu-item">
-						<a class="am-Header-text" href="#">DESCUBRE <i class="fa fa-caret-down"></i></a>
+						<a class="am-Header-text desktop" href="/works/category/all/page-1/?order=popularity">
+							<p>OBRAS</p><i class="fa fa-paint-brush"></i>
+						</a>
 					</li>
 					<li class="am-Header-menu-item">
-						<a class="am-Header-text" href="#">TIENDA <i class="fa fa-caret-down"></i></a>
+						<a class="am-Header-text desktop" href="/products/type/all/page-1?order=popularity">
+							<p>TIENDA</p><i class="fa fa-diamond"></i>
+						</a>
 					</li>
-					<li class="am-Header-menu-item">
-						<a class="am-Header-text" href="#">RETOS</a>
-					</li>
-					<li class="am-Header-menu-item">
+					<li class="am-Header-menu-item upload">
 						<a class="am-Upload-button" href="#"><i class="fa fa-cloud-upload"></i> SUBIR</a>
 					</li>
-					<li class="am-Header-menu-item" style="padding-left: 22px;">
+					<!-- <li class="am-Header-menu-item" style="padding-left: 22px;">
 						<div class="am-Header-icon">
 							<i class="fa fa-bell-o"></i><span>29</span>
 						</div>
-					</li>
-					<li class="am-Header-menu-item" style="padding-left: 22px;">
+					</li> -->
+					<li class="am-Header-menu-item cart">
 						<div class="am-Header-icon">
 							<i class="fa fa-shopping-cart"></i><span>10</span>
 						</div>
 					</li>
 					<li class="am-Header-menu-item">
 						<div class="am-Avatar">
-							<img src="img/avatar.jpg">&nbsp;<i class="fa fa-caret-down"></i>
+							<img src="/img/avatar.jpg">&nbsp;<i class="fa fa-caret-down"></i>
 						</div>
 					</li>
 				</ul>
 			</header>
 		</div>
-	</div> -->
+	</div>
 
 	<div class="grid-container u-padding-top-15 u-padding-bottom-15">
 		<div class="grid-100">
@@ -54,22 +60,17 @@
 					</a>
 				</figure>
 				<ul class="am-Header-menu">
-					<!-- <li class="am-Header-menu-item">
-						<a class="am-Header-text" href="#">
-							<p>HOME</p>
-						</a>
-					</li> -->
-					<li class="am-Header-menu-item">
+					<li class="am-Header-menu-item desktop">
 						<a class="am-Header-text" href="/users/specialty/all/page-1?order=popularity">
 							<p>ARTISTAS</p><i class="fa fa-heart-o"></i>
 						</a>
 					</li>
-					<li class="am-Header-menu-item">
+					<li class="am-Header-menu-item desktop">
 						<a class="am-Header-text" href="/works/category/all/page-1/?order=popularity">
 							<p>OBRAS</p><i class="fa fa-paint-brush"></i>
 						</a>
 					</li>
-					<li class="am-Header-menu-item">
+					<li class="am-Header-menu-item desktop">
 						<a class="am-Header-text" href="/products/type/all/page-1?order=popularity">
 							<p>TIENDA</p><i class="fa fa-diamond"></i>
 						</a>
@@ -84,3 +85,10 @@
 			</header>
 		</div>
 	</div>
+
+
+<!-- <li class="am-Header-menu-item">
+						<a class="am-Header-text" href="#">
+							<p>HOME</p>
+						</a>
+					</li> -->
