--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -27,66 +27,38 @@
 							<p>TIENDA</p><i class="fa fa-diamond"></i>
 						</a>
 					</li>
-					<li class="am-Header-menu-item upload">
-						<a class="am-Upload-button" href="#"><i class="fa fa-cloud-upload"></i> SUBIR</a>
-					</li>
-					<!-- <li class="am-Header-menu-item" style="padding-left: 22px;">
-						<div class="am-Header-icon">
-							<i class="fa fa-bell-o"></i><span>29</span>
-						</div>
-					</li> -->
-					<li class="am-Header-menu-item cart">
-						<div class="am-Header-icon">
-							<i class="fa fa-shopping-cart"></i><span>10</span>
-						</div>
-					</li>
-					<li class="am-Header-menu-item">
-						<div class="am-Avatar">
-							<img src="/img/avatar.jpg">&nbsp;<i class="fa fa-caret-down"></i>
-						</div>
-					</li>
+					{% if user %}
+						<li class="am-Header-menu-item upload">
+							<a class="am-Upload-button" href="{{user.url}}/work/add"><i class="fa fa-cloud-upload"></i> SUBIR</a>
+						</li>
+						<!-- <li class="am-Header-menu-item" style="padding-left: 22px;">
+							<div class="am-Header-icon">
+								<i class="fa fa-bell-o"></i><span>29</span>
+							</div>
+						</li> -->
+						<li class="am-Header-menu-item cart">
+							<div class="am-Header-icon">
+								<a href="{{user.url}}/cart"><i class="fa fa-shopping-cart"></i><span>10</span></a>
+							</div>
+						</li>
+						<li class="am-Header-menu-item">
+							<a href="{{user.url}}">
+								<div class="am-Avatar">
+									<img src="{{user.photo}}">&nbsp;<i class="fa fa-caret-down"></i>
+								</div>
+							</a>
+						</li>
+					{% else %}
+						<li class="am-Header-menu-item">
+							<a class="am-Signin-button" href="/auth/login">
+								<i class="fa fa-user"></i> INGRESAR
+							</a>
+						</li>
+					{% endif %}
 				</ul>
 			</header>
 		</div>
 	</div>
-
-	<div class="grid-container u-padding-top-15 u-padding-bottom-15">
-		<div class="grid-100">
-			<header class="am-Header">
-				<figure class="am-Header-logo">
-					<a href="/">
-						<img class="large" src="/img/logo.png">
-						<img class="small" src="/img/logo-small.png">
-					</a>
-				</figure>
-				<ul class="am-Header-menu">
-					<li class="am-Header-menu-item desktop">
-						<a class="am-Header-text" href="/users/specialty/all/page-1?order=popularity">
-							<p>ARTISTAS</p><i class="fa fa-heart-o"></i>
-						</a>
-					</li>
-					<li class="am-Header-menu-item desktop">
-						<a class="am-Header-text" href="/works/category/all/page-1/?order=popularity">
-							<p>OBRAS</p><i class="fa fa-paint-brush"></i>
-						</a>
-					</li>
-					<li class="am-Header-menu-item desktop">
-						<a class="am-Header-text" href="/products/type/all/page-1?order=popularity">
-							<p>TIENDA</p><i class="fa fa-diamond"></i>
-						</a>
-					</li>
-
-					<li class="am-Header-menu-item">
-						<a class="am-Signin-button" href="/auth/login">
-							<i class="fa fa-user"></i> INGRESAR
-						</a>
-					</li>
-				</ul>
-			</header>
-		</div>
-	</div>
-
-
 <!-- <li class="am-Header-menu-item">
 						<a class="am-Header-text" href="#">
 							<p>HOME</p>
