--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -881,7 +881,7 @@ body
 .am-complete-profile-box
 	background white
 	border solid 1px #979797
-	max-width 580px
+	max-width 580px !important
 	margin auto
 	box-sizing border-box
 	padding-top 30px
@@ -967,7 +967,7 @@ body
 
 @media (min-width: 630px)
 	.am-complete-profile-box
-		padding 60px 60px
+		padding 60px 60px !important
 
 
 
