--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -980,7 +980,7 @@ body
 
 .am-upload-work-box
 	background white
-	max-width 580px
+	max-width 580px !important
 	margin autlo
 	box-sizing border-box
 	border-radius 4px
@@ -1076,7 +1076,7 @@ body
 
 @media (min-width: 630px)
 	.am-upload-work-box
-		padding 60px 60px 40px 60px
+		padding 60px 60px 40px 60px !important
 
 
 
@@ -1412,3 +1412,194 @@ body
 		margin 10px
 		background-size cover
 		background-position center center
+
+
+
+.am-checkout
+	padding 40px 0
+
+.checkout-box
+	background white
+	border-radius 4px
+	overflow hidden
+	.checkout-menu
+		background #eee
+		border-bottom solid 1px #bac5c7
+		overflow hidden
+		padding 10px 5px
+		.tab
+			font-family 'Montserrat', sans-serif
+			font-size 10px
+			color #9f9f9f
+			letter-spacing 2px
+			// margin 20px
+			margin 10px
+			cursor pointer
+			border-radius 40px
+			padding 5px 10px
+			&.selected
+				background #4a4a4a
+				color white
+	.checkout-content
+		max-width 1050px
+		margin auto
+		.title
+			font-family 'Montserrat', sans-serif
+			font-weight bold
+			font-size 24px
+			text-align center
+			padding-top 20px
+			color charcoal-grey
+		.sub-title
+			font-family 'Montserrat', sans-serif
+			font-size 18px
+			color charcoal-grey
+			padding-top 20px
+		.checkout-info
+			padding-top 20px
+			.addresses
+				border solid 1px #bac5c7
+				border-radius 4px
+				.address
+					cursor pointer
+					padding 10px
+					display flex
+					align-items center
+					&:not(:first-child)
+						border-top solid 1px #bac5c7
+					.address-title
+						font-family 'Montserrat', sans-serif
+						font-size 16px
+						color charcoal-grey
+						padding-left 5px
+						line-height 1.5
+					.address-subtitle
+						font-family 'Montserrat', sans-serif
+						font-size 14px
+						color warm-grey
+						padding-left 5px
+						line-height 1.35
+					.address-label
+						font-family 'Montserrat', sans-serif
+						font-size 14px
+						color charcoal-grey
+						padding 10px 0
+					.address-input
+						border solid 1px #979797
+						border-radius 4px
+						width 100%
+						padding 13px 15px
+						box-sizing border-box
+						font-size 13.6px
+						font-family 'Montserrat', sans-serif
+						background white
+
+			.cart-items
+				width: 100%;
+				.cart-label
+					font-family 'Montserrat', sans-serif
+					font-size 14px
+					color charcoal-grey
+					// padding 10'px 0
+				// .cart-item-data
+					// display flex
+				.cart-item-img
+					width 100px
+					height 100px
+					margin-right 10px
+				.cart-title
+				.cart-text
+					font-family 'Montserrat', sans-serif
+					font-size 13px
+					color charcoal-grey
+					line-height 1.25
+				.cart-title
+					font-weight bold
+					padding-top 8px
+				.cart-artist
+					padding-top 7px
+					font-family: 'PT Serif', serif;
+					font-size 12px
+					color warm-grey
+					span
+						font-weight bold
+				.cart-input
+					background #eee
+					max-width: 40px;
+					padding 5px 10px
+					margin 0 10px
+				.cart-delete
+					color #ff6666
+					cursor pointer
+
+		.checkout-resume
+			padding-top 20px
+			.company
+				max-width 310px
+				margin 20px auto 10px auto
+				display block
+			.resume-box
+				border solid 1px #bac5c7
+				border-radius 4px
+				max-width 310px
+				margin auto
+				header
+					font-family 'Montserrat', sans-serif
+					font-weight bold
+					font-size 10px
+					letter-spacing 2px
+					border-bottom solid 1px #bac5c7
+					padding 20px 10px
+					text-align center
+				section
+					padding 10px 20px
+					table
+						width 100%
+						max-width 200px
+						margin auto
+				.price
+				.label
+					font-family 'Montserrat', sans-serif
+					font-size 14px
+					color #4a4a4a
+					padding-top 10px
+				.label
+					font-weight bold
+				.price
+					text-align right
+
+		.buttons-container
+			display flex
+			max-width 500px
+			margin 40px auto 50px auto
+			.button
+				margin 10px
+		.button
+			font-family 'Montserrat', sans-serif
+			font-weight bold
+			border-radius 4px
+			letter-spacing 2px
+			font-size 10px
+			padding 10px 30px
+			cursor pointer
+			box-shadow 1px 2px 1px 0 rgba(black, .5)
+			width 100%
+			&[data-color="blue"]
+				border solid 1px #333
+				background #277cea
+				color white
+			&[data-color="gray"]
+				border solid 1px #000
+				background white
+				color #3a3d3f
+
+
+@media (min-width: 650px)
+	.cart-item-data
+		display flex
+
+@media (min-width: 810px)
+	.checkout-menu
+		display flex
+		justify-content center
+		align-items center
