--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -118,22 +118,24 @@
 						</div>
 					</div>
 					<div class="menu">
-						<div class="single-tabs">
-							<div class="single-tab" selected="true">
-								<p>MANIFIESTO</p>
-								<i class="fa fa-cube"></i>
-							</div>
-							<div class="single-tab">
-								<p>PRODUCTOS</p>
-								<span>25</span>
-							</div>
-							<div class="single-tab">
-								<p>REVIEWS</p>
-								<span>25</span>
-							</div>
-							<div class="single-tab" selected="true">
-								<p>TAGS</p>
-								<i class="fa fa-align-left"></i>
+						<div class="carousel">
+							<div class="single-tabs">
+								<div class="single-tab" selected="true">
+									<p>MANIFIESTO</p>
+									<i class="fa fa-cube"></i>
+								</div>
+								<div class="single-tab">
+									<p>PRODUCTOS</p>
+									<span>25</span>
+								</div>
+								<div class="single-tab">
+									<p>REVIEWS</p>
+									<span>25</span>
+								</div>
+								<div class="single-tab" selected="true">
+									<p>TAGS</p>
+									<i class="fa fa-align-left"></i>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -154,13 +156,15 @@
 	</div>
 
 	<div class="grid-container u-margin-top-20">
-		<div class="grid-100 grid-parent">
-			<div class="more-images">
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+		<div class="grid-100">
+			<div class="more-carousel">
+				<div class="more-images">
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -173,13 +177,15 @@
 	</div>
 
 	<div class="grid-container u-margin-top-20">
-		<div class="grid-100 grid-parent">
-			<div class="more-images">
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+		<div class="grid-100">
+			<div class="more-carousel">
+				<div class="more-images">
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -192,13 +198,15 @@
 	</div>
 
 	<div class="grid-container u-margin-top-20">
-		<div class="grid-100 grid-parent">
-			<div class="more-images">
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+		<div class="grid-100">
+			<div class="more-carousel">
+				<div class="more-images">
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/products/product1.jpg);"></div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -217,13 +225,15 @@
 	</div>
 
 	<div class="grid-container">
-		<div class="grid-100 grid-parent">
-			<div class="more-images">
-				<div class="am-MoreImages" style="background-image: url(/img/works/work11.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/works/work1.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/works/work13.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/works/work4.jpg);"></div>
-				<div class="am-MoreImages" style="background-image: url(/img/works/work14.jpg);"></div>
+		<div class="grid-100">
+			<div class="more-carousel">
+				<div class="more-images">
+					<div class="am-MoreImages" style="background-image: url(/img/works/work11.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/works/work1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/works/work13.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/works/work4.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/works/work14.jpg);"></div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -238,6 +248,20 @@
 	</div>
 
 	<div class="grid-container">
+		<div class="grid-100">
+			<div class="more-carousel">
+				<div class="more-images">
+					<div class="am-MoreImages" style="background-image: url(/img/works/work11.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/works/work1.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/works/work13.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/works/work4.jpg);"></div>
+					<div class="am-MoreImages" style="background-image: url(/img/works/work14.jpg);"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- <div class="grid-container">
 		<div class="grid-100 grid-parent">
 			<div class="more-images">
 				<div class="am-MoreImages">
@@ -257,7 +281,7 @@
         </div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
 	<!-- ********************************************************************
