--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -86,22 +86,24 @@
 						</div>
 					</div>
 					<div class="menu">
-						<div class="single-tabs">
-							<div class="single-tab">
-								<p>MANIFIESTO</p>
-								<i class="fa fa-cube"></i>
-							</div>
-							<div class="single-tab" selected="true">
-								<p>PRODUCTOS</p>
-								<span>25</span>
-							</div>
-							<div class="single-tab">
-								<p>REVIEWS</p>
-								<span>25</span>
-							</div>
-							<div class="single-tab">
-								<p>TAGS</p>
-								<i class="fa fa-align-left"></i>
+						<div class="carousel">
+							<div class="single-tabs">
+								<div class="single-tab">
+									<p>MANIFIESTO</p>
+									<i class="fa fa-cube"></i>
+								</div>
+								<div class="single-tab" selected="true">
+									<p>PRODUCTOS</p>
+									<span>25</span>
+								</div>
+								<div class="single-tab">
+									<p>REVIEWS</p>
+									<span>25</span>
+								</div>
+								<div class="single-tab">
+									<p>TAGS</p>
+									<i class="fa fa-align-left"></i>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -118,8 +120,10 @@
 	</div>
 
 	<div class="grid-container u-margin-top-20">
-		<div class="grid-100 grid-parent">
-			<div class="more-images products">
+		<div class="grid-100">
+			<div class="more-carousel">
+				<div class="more-images products">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -134,8 +138,10 @@
 	</div>
 
 	<div class="grid-container">
-		<div class="grid-100 grid-parent">
-			<div class="more-images more">
+		<div class="grid-100">
+			<div class="more-carousel">
+				<div class="more-images more">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -149,8 +155,10 @@
 	</div>
 
 	<div class="grid-container">
-		<div class="grid-100 grid-parent">
-			<div class="more-images similar">
+		<div class="grid-100">
+			<div class="more-carousel">
+				<div class="more-images similar">
+				</div>
 			</div>
 		</div>
 	</div>
