--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -60,7 +60,7 @@
 {% block scripts %}
 	<script>
 		$(function() {
-			$('.tags').tagsInput({width:'100%', defaultText:'Añadir Etiqueta'});
+			$('.tags').tagsInput({width:'100%', height:'50px', defaultText:'+ Etiqueta'});
 		});
 
 		$('.add-work').submit(function(event) {
