--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -58,14 +58,19 @@
 {% endblock %}
 
 {% block scripts %}
+	<script src="http://code.jquery.com/jquery-2.1.1.min.js" lang="text/javascript"></script>
+  <script src='/jquery.ui.widget.js' type='text/javascript'></script>
+  <script src='/jquery.iframe-transport.js' type='text/javascript'></script>
+  <script src='/jquery.fileupload.js' type='text/javascript'></script>
+  <script src='/jquery.cloudinary.js' type='text/javascript'></script>
 	<script>
 		$(function() {
+				$('.add-work').submit(function(event) {
+					event.preventDefault();
+					console.log($(this).serializeArray());
+				});
 			$('.tags').tagsInput({width:'100%', height:'50px', defaultText:'+ Etiqueta'});
 		});
 
-		$('.add-work').submit(function(event) {
-			event.preventDefault();
-			console.log($(this).serializeArray());
-		})
 	</script>
 {% endblock %}
