--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -20,43 +20,45 @@
 	<div class="am-Profile-menu-container">
 		<div class="grid-container">
 			<div class="grid-100">
-				<div class="am-Profile-menu">
-					<a href='{{profile.url}}/'>
+				<div class="user-carousel">
+					<div class="am-Profile-menu">
 						<div class="am-Profile-menu-item portfolio">
-							<p>PORTAFOLIO</p>
-							<p>{{data[0]}}</p>
+							<a href='{{profile.url}}/'>
+								<p>PORTAFOLIO</p>
+								<p>{{data[0]}}</p>
+							</a>
 						</div>
-					</a>
-					<a href='{{profile.url}}/store'>
 						<div class="am-Profile-menu-item store">
-							<p>TIENDA</p>
-							<p>{{data[1]}}</p>
+							<a href='{{profile.url}}/store'>
+								<p>TIENDA</p>
+								<p>{{data[1]}}</p>
+							</a>
 						</div>
-					</a>
-					<a href='{{profile.url}}/collections'>
 						<div class="am-Profile-menu-item collections">
-							<p>COLECCIONES</p>
-							<p>{{data[2]}}</p>
+							<a href='{{profile.url}}/collections'>
+								<p>COLECCIONES</p>
+								<p>{{data[2]}}</p>
+							</a>
 						</div>
-					</a>
-					<a href='{{profile.url}}/followings'>
 						<div class="am-Profile-menu-item followings">
-							<p>SIGUIENDO</p>
-							<p>{{data[3]}}</p>
+							<a href='{{profile.url}}/followings'>
+								<p>SIGUIENDO</p>
+								<p>{{data[3]}}</p>
+							</a>
 						</div>
-					</a>
-					<a href='{{profile.url}}/followers'>
 						<div class="am-Profile-menu-item followers">
-							<p>SEGUIDORES</p>
-							<p>{{data[4]}}</p>
+							<a href='{{profile.url}}/followers'>
+								<p>SEGUIDORES</p>
+								<p>{{data[4]}}</p>
+							</a>
 						</div>
-					</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="discover-content grid-container u-padding-top-10 u-padding-bottom-70">
-		<div class="grid-100">
+		<div class="grid-100 grid-parent">
       <div class="grid work-layout-discover">
 
       </div>
